Fix squashed illustrations

--- a/style.css
+++ b/style.css
@@ -86,20 +86,20 @@ h2 {
     display: flex;
     justify-content: center;
     text-align: center;
+    gap: 20px;
 }
 
 .info {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    flex-basis: 10em;
-    align-items: center;
+    flex: 0 0 10em;
     align-items: center;
 }
 
 .pics {
     border: solid blue;
-    max-width: 20vw;
-    height: 20vh;
+    width: 10em;
+    height: 10em;
     border-radius: 15px;
 }
